devOps/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-gateway
  namespace: api-gateway
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/api`)
      services:
        - name: api-gateway
          port: 50090
          scheme: http
